--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@
   --weight-bold: 700;
   --weight-semi-bold: 600;
   --weight-regular: 400;
+
+  /* Size */
+  --size-border-radius: 4px;
+
 }
 
 /* Typography */
@@ -84,7 +88,9 @@ p {
   body 태그에 설정
 */
 body {
+  font-family: 'Open Sans', sans-serif;
   margin: 0;
+  cursor: default;
 }
 
 a {
@@ -104,6 +110,46 @@ ul {
    */
   display: flex;
   justify-content: space-between;
-  /* 사이에 간격두고 배치 */
+  /* 사이에 간격두고 배치를 위해 justify-content*/
   background-color: var(--color-pink);
+  align-items: center;
+  color: var(--color-white);
+  padding: 16px;
 }
+
+.navbar__menu {
+  display: flex;
+}
+
+.navbar__logo {
+  font-size: var(--font-medium);
+  font-weight: var(--weight-semi-bold);
+}
+
+.navbar__menu__item {
+  padding: 8px 12px;
+  margin: 0 4px;
+  cursor: pointer;
+  border-radius: var(--size-border-radius);
+}
+
+.navbar__menu__item.active {
+  border: 1px silid var(--color-white);
+}
+
+.navbar__menu__item:hover {
+  background-color: var(--color-dark-pink);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
