--- a/style.css
+++ b/style.css
@@ -141,6 +141,31 @@ ul {
   background-color: var(--color-dark-pink);
 }
 
+/* Home */
+#home {
+  /*background: url("imgs/home-background.png") center/cover no-repeat ; */
+  padding: 40px;
+  text-align: center;
+}
+
+.home__avatar {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  border: 2px solid var(--color-light-white);
+}
+
+.home__title,
+.home__description {
+  color: var(--color-white);
+}
+
+.home__contact {
+  font-size: var(--font-regular);
+  font-weight: var(--weight-bold);
+  margin: 24px;
+  padding: 8px 12px;
+}
 
 
 
