--- a/style.css
+++ b/style.css
@@ -103,6 +103,17 @@ ul {
   padding-left: 0;
 }
 
+li {
+  list-style: none;
+}
+
+button {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
 /* Navbar */
 #navbar {
   /*
@@ -161,11 +172,17 @@ ul {
 }
 
 .home__contact {
+  color: var(--color-white);
   font-size: var(--font-regular);
   font-weight: var(--weight-bold);
   margin: 24px;
   padding: 8px 12px;
+  border: 2px solid var(--color-white);
+  border-radius: var(--size-border-radius);
+
 }
+
+
 
 
 
