--- a/style.css
+++ b/style.css
@@ -36,6 +36,9 @@
   /* Size */
   --size-border-radius: 4px;
 
+  /* Animation */
+  --animation-duration: 300ms;
+
 }
 
 /* Typography */
@@ -179,14 +182,93 @@ button {
   padding: 8px 12px;
   border: 2px solid var(--color-white);
   border-radius: var(--size-border-radius);
-
 }
 
+/* Section common */
+.section {
+  padding: 50px;
+  text-align: center;
+  max-width: 1200px;
+  /* 가운데 섹션의 최대 너비를 지정해줌 */
+  margin: auto;
+  /* margin: auto를 안해주면 한쪽으로 치우쳐있어서 추가 */
+}
 
+/* About */
+.about__majors {
+  display: flex;
+  justify-content: space-between;
+  margin: 80px 0;
+  /* 위 아래로 80px, 양 옆은 없이 */
+}
 
+.major__icon {
+  width: 170px;
+  height: 170px;
+  line-height: 170px;
+  /* 수직적으로 중간에 오도록 line-height을 높이만큼 */
+  font-size: 70px;
+  /* awesome-font 도 font 이므로 font-size 가능 */
+  margin: auto;
+  border: 1px solid var(--color-blue);
+  border-radius: 50%;
+  margin-bottom: 16px;
+  color: var(--color-blue);
+}
 
+.major__title, .major__description {
+  color: var(--color-dark-grey);
+}
 
+.major__description {
+  font-size: var(--font-small);
+}
 
+/* major-icon 에 마우스 올렸을때 아이콘이 조금 돌아가고, 색 변경 */
+.major__icon:hover i {
+  /* major__icon에 호버가 됐을때 그 안에 있는 i에만 옵션 줄때
+   위처럼 선택자 설정
+   */
+  color: var(--color-pink);
+  transform: rotate(-30deg) scale(1.1);
+}
+
+/*
+  animation 효과를 위해 transition 주기
+  -> 급작스럽게 변하지 않도록
+*/
+.major__icon i {
+  transition: all var(--animation-duration) ease;
+  /*
+    250 ~ 300ms 정도면 사용자가 느끼기에 변화를 적당히 느낄 수 있고,
+    답답하지는 않은 정도..!
+   */
+}
+
+/* job을 flex박스로 만들어서, 한줄에 하나씩 */
+.job {
+  display: flex;
+  align-items: center;
+}
+
+.job__description {
+  margin: 0 16px;
+  /* 위아래는 안주고 양 옆에 16px */
+  text-align: left;
+  /* text 왼쪽 정렬 */
+}
+
+.job__name, .job__period {
+  color: var(--color-light-grey);
+}
+
+.job__name {
+  font-size: var(--font-small);
+}
+
+.job__period {
+  font-size: var(--font-micro);
+}
 
 
 
