#css : skills css 추가, div 이용해서 self로 프로그레스 바 만들기

--- a/style.css
+++ b/style.css
@@ -188,10 +188,14 @@ button {
 .section {
   padding: 50px;
   text-align: center;
-  max-width: 1200px;
   /* 가운데 섹션의 최대 너비를 지정해줌 */
   margin: auto;
   /* margin: auto를 안해주면 한쪽으로 치우쳐있어서 추가 */
+}
+
+.section__container {
+  max-width: 1200px;
+  margin: auto;
 }
 
 /* About */
@@ -269,6 +273,64 @@ button {
 .job__period {
   font-size: var(--font-micro);
 }
+
+/* Skill */
+
+#skill {
+  background-color: var(--color-yellow);
+}
+
+.skillset {
+  display: flex;
+  background-color: var(--color-light-grey);
+  color: var(--color-light-white);
+  margin: 20px 0;
+}
+
+.skillset__title {
+  color: var(--color-white);
+}
+
+.skillset__left {
+  flex-basis: 60%;
+  background-color: var(--color-dark-grey);
+  padding: 20px 40px;
+}
+
+.skill__description {
+  display: flex;
+  justify-content: space-between;
+  /* 아이템들을 양 끝에 배치할 때 */
+}
+
+.skill {
+  margin-bottom: 32px;
+}
+
+.skill__bar {
+  width: 100%;
+  height: 3px;
+  background-color: var(--color-grey);
+}
+
+.skill__value {
+  height: 3px;
+  background-color: var(--color-orange);
+}
+
+.skillset__right {
+  flex-basis: 40%;
+}
+
+.tools {
+  background-color: var(--color-grey);
+
+}
+
+.tools, .etc {
+  padding: 20px;
+}
+
 
 
 
